adjusted helm install for windows, added disk size to nfs sample

--- a/solace/values-examples/dev100-persist-ha-nfs.yaml
+++ b/solace/values-examples/dev100-persist-ha-nfs.yaml
@@ -57,3 +57,4 @@ storage:
   persistent: true
 # Set useStorageClass the same as defined in the NFS provisioner service
   useStorageClass: nfs
+  size: 30Gi
