--- a/solace/templates/solaceConfigMap.yaml
+++ b/solace/templates/solaceConfigMap.yaml
@@ -220,15 +220,21 @@ data:
     echo "`date` INFO: ${APP}-node ordinal: ${node_ordinal}"
     password=`cat {{ .Values.filepaths.secrets }}/username_admin_password`
 
-    # First ensure redundancy is up
-    results=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
-            -q "<rpc><show><redundancy/></show></rpc>" \
-            -v "/rpc-reply/rpc/show/redundancy/redundancy-status"`
-    redundancystatus_results=`echo ${results} | xmllint -xpath "string(returnInfo/valueSearchResult)" -`
-    if [ "${redundancystatus_results}" != "Up" ]; then
-      echo "`date` INFO: ${APP}-Redundancy state is not yet up. Query results: ${redundancystatus_results}"
-      exit 1
+    # For upgrade purposes, ensure redundancy is up only when the pod is started
+    redundacycheck_file=/tmp/redundacycheck
+    if [ ! -f ${redundacycheck_file} ]; then
+      results=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080/SEMP \
+              -q "<rpc><show><redundancy/></show></rpc>" \
+              -v "/rpc-reply/rpc/show/redundancy/redundancy-status"`
+      redundancystatus_results=`echo ${results} | xmllint -xpath "string(returnInfo/valueSearchResult)" -`
+      if [ "${redundancystatus_results}" != "Up" ]; then
+        echo "`date` INFO: ${APP}-Redundancy state is not yet up. Query results: ${redundancystatus_results}"
+        exit 1
+      fi
+      echo "Creating redundacycheck_file"
+      echo "true" > ${redundacycheck_file}
     fi
+    
 
     if [ "${node_ordinal}" = "2" ]; then
       echo "`date` INFO: ${APP}-Monitor node ready check"
