Changing dev100 persist to work on Minikube - use default storage class

--- a/solace/templates/solaceStatefullSet.yaml
+++ b/solace/templates/solaceStatefullSet.yaml
@@ -182,8 +182,10 @@ spec:
     spec:
   {{- if .Values.storage.useStorageClass }}
       storageClassName: {{ .Values.storage.useStorageClass }}
-  {{ else }}
+  {{- else if .Values.storage.type }}
       storageClassName: {{ .Release.Name }}-{{ .Values.storage.type }}
+  {{- else }}
+      storageClassName: standard
   {{- end}}
       accessModes: [ "ReadWriteOnce" ]
       resources:
