--- a/solace/values-examples/dev100-persist-ha-provisionPvc.yaml
+++ b/solace/values-examples/dev100-persist-ha-provisionPvc.yaml
@@ -52,10 +52,5 @@ service:
       protocol: TCP
 storage:
   persistent: true
-# For best performance set type:fast size:500Gi and fsType:xfs
-#  type: fast
-#  size: 500Gi
-#  fsType: xfs
-# For best compatability set type:standard size:30Gi and leave fsType default ext4
-  type: standard
+# Uses the default standard storage class
   size: 30Gi
