--- a/solace/templates/solaceConfigMap.yaml
+++ b/solace/templates/solaceConfigMap.yaml
@@ -228,7 +228,7 @@ data:
               -q "<rpc><show><redundancy><group/></redundancy></show></rpc>" \
               -c "/rpc-reply/rpc/show/redundancy/group-node/status[text() = \"Online\"]"`
       nr_node_results=`echo ${role_results} |  xmllint -xpath "string(returnInfo/countSearchResult)" -`
-      if [ nr_node_results -ne 3 ]; then
+      if [ $nr_node_results -ne 3 ]; then
         echo "`date` INFO: ${APP}-Not all nodes are online. Query results: ${nr_node_results}"
         exit 1
       fi
@@ -265,7 +265,7 @@ data:
                 -v "//ip-address[$id]"`
         node_ip_address=`echo ${results} | xmllint -xpath "string(returnInfo/valueSearchResult)" -`
         nr_voter_results=`curl --unix-socket /var/run/consul -s http://$node_ip_address:8500/v1/operator/raft/configuration  | python -m json.tool | grep Voter | grep true | wc -l`
-        if [ nr_voter_results -ne 3 ]; then
+        if [ $nr_voter_results -ne 3 ]; then
           echo "`date` INFO: ${APP}-Still waiting for all 3 Consul voters to be present for node $node_ip_address. Query results: ${nr_voter_results}"
           exit 1
         fi
