--- a/solace/templates/podModRbac.yaml
+++ b/solace/templates/podModRbac.yaml
@@ -1,10 +1,9 @@
 # Fix rbac
----
 {{- if semverCompare ">=1.8-0" .Capabilities.KubeVersion.GitVersion }}
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: pod-tag-updater
+  name: {{ template "solace.fullname" . }}-podtagupdater
 rules:
 - apiGroups: [""] # "" indicates the core API group
   resources: ["pods"]
@@ -13,11 +12,11 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: solace
+  name: {{ template "solace.fullname" . }}-serviceaccounts-to-podtagupdater
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: pod-tag-updater
+  name: {{ template "solace.fullname" . }}-podtagupdater
 subjects:
 - kind: Group
   name: system:serviceaccounts
