--- a/solace/templates/solaceStatefulSet.yaml
+++ b/solace/templates/solaceStatefulSet.yaml
@@ -88,6 +88,10 @@ spec:
 {{- end }}
         securityContext:
           privileged: false
+          capabilities:
+            add:
+              - IPC_LOCK
+              - SYS_NICE
         env:
         - name: STATEFULSET_NAME
           value: {{ template "solace.fullname" . }}
