--- a/solace/templates/podModRbac.yaml
+++ b/solace/templates/podModRbac.yaml
@@ -10,7 +10,7 @@ rules:
   verbs: ["patch"]
 ---
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ template "solace.fullname" . }}-serviceaccounts-to-podtagupdater
 roleRef:
