Added back original semp port to the list of internal service ports used.

--- a/solace/templates/service-discovery.yaml
+++ b/solace/templates/service-discovery.yaml
@@ -11,6 +11,8 @@ metadata:
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
 spec:
   ports:
+  - port: 8080
+    name: semp
   - port: 8741
     name: ha-mate-link
   - port: 8300
