--- a/solace/templates/podModRbac.yaml
+++ b/solace/templates/podModRbac.yaml
@@ -1,3 +1,4 @@
+# Deployment requires the capability of patching the pod to indicate active state for load balancing
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
